--- a/public/index.html
+++ b/public/index.html
@@ -26,5 +26,6 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script src="%PUBLIC_URL%/js/smoothscroll.js"></script>
   </body>
 </html>
